@@ -4,6 +4,7 @@ var defaultSites = {
   'Barron\'s': 'barrons.com',
   'Bloomberg': 'bloomberg.com',
   'Business Insider': 'businessinsider.com',
+  'Caixin': 'caixinglobal.com',
   'Crain\'s Chicago Business': 'chicagobusiness.com',
   'Chicago Tribune': 'chicagotribune.com',
   'Corriere Della Sera': 'corriere.it',
@@ -35,6 +36,7 @@ var defaultSites = {
   'The Nation': 'thenation.com',
   'The New York Times': 'nytimes.com',
   'The New Yorker': 'newyorker.com',
+  'Orange County Register': 'ocregister.com',
   'OrlandoSentinel': 'orlandosentinel.com',
   'Quora': 'quora.com',
   'SunSentinel': 'sun-sentinel.com',
